# maestro-scripts

./: .env.example  .gitignore  AGENTS.md  Dockerfile  app.py  docker-compose.yml  justfile  misc.py  opencode.json  pyproject.toml  redis.conf
common/: balldontlie.py  event_type.py  finance.py  gates.py
common/tests/: test_db_types.py
custom_domains/: __init__.py  climate.py  complication.py  google_calendar.py  input_text.py  maestro.py  media_player.py  person_extended.py  sonos_speaker.py  sprinkler_zone.py  zone.py  zone_extended.py
family/: chelsea.py  ellie.py  olivia.py  people.py
family/tests/: test_chelsea.py  test_ellie.py  test_olivia.py
frontend/: cast.py  next_game.py  sidebar.py
frontend/common/: icons.py
frontend/entity_cards/: hass.py  home.py  livi.py  nyx.py  office.py  tess.py
home/: bathroom_floor.py  critical_door_notif.py  door_left_open.py  media.py  thermostat.py
home/office/: air_purifier.py  door_leds.py  meetings.py  space_heater.py
home/office/tests/: test_air_purifier.py  test_meetings.py  test_space_heater.py
home/sprinklers/: controller.py  triggers.py
home/tests/: test_bathroom_floor.py  test_critical_door_notif.py  test_door_left_open.py  test_media.py  test_thermostat.py
location_tracking/: models.py  notifications.py  queries.py  tracking.py
location_tracking/tests/: test_notifications.py  test_queries.py  test_tracking.py
scripts/common/: balldontlie.py  db_types.py  finance.py  gates.py
scripts/common/tests/: test_db_types.py
scripts/family/: chelsea.py  ellie.py  olivia.py
scripts/family/tests/: test_chelsea.py  test_ellie.py  test_olivia.py
scripts/frontend/: cast.py  next_game.py  sidebar.py
scripts/frontend/common/: entity_card.py
scripts/frontend/entity_cards/: hass.py  home.py  livi.py  nyx.py  office.py  tess.py
scripts/home/: bathroom_floor.py  critical_door_notif.py  door_left_open.py  media.py  thermostat.py
scripts/home/office/: air_purifier.py  meetings.py  space_heater.py
scripts/location_tracking/: models.py  notifications.py  tracking.py
scripts/sleep_tracking/: events.py  models.py  queries.py
scripts/system/: admin.py  backups.py  prune_registry.py
scripts/vehicles/: charging.py  common.py  sentry_reminder.py
sleep_tracking/: __init__.py  events.py  main.py  models.py  queries.py
sleep_tracking/tests/: test_events.py  test_queries.py
system/: admin.py  backups.py  prune_registry.py
system/tests/: test_admin.py  test_backups.py
vehicles/: charging.py  common.py  complications.py  sentry_reminder.py
vehicles/tests/: test_charging.py  test_sentry_reminder.py
(+19 files in other folders)
